<resources>
    <string name="app_name">Options Pricer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_blackscholes">Start</string>
    <string name="all_greeks">Greeks</string>
    <string name="all_stockprice">Stock price</string>
    <string name="all_strikeprice">Strike price</string>
    <string name="all_volatility">Volatility</string>
    <string name="all_maturity">Time to maturity</string>
    <string name="all_riskfree">Risk-free rate</string>
    <string name="all_currency">USD</string>
    <string name="all_timeunit">in years</string>
    <string name="all_percent">annual %</string>
    <string name="all_calculate">Calculate</string>
    <string name="all_call">Call</string>
    <string name="all_put">Put</string>
    <string name="all_optionsprice">Price</string>
    <string name="all_help">Help</string>
    <string name="all_delta">Delta</string>
    <string name="all_gamma">Gamma</string>
    <string name="all_vega">Vega</string>
    <string name="all_theta">Theta</string>
    <string name="all_rho">Rho</string>
</resources>
